# GeneralToolScrapper

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  changelog  pyproject.toml  todos
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CATEGORIZATION.md  CLI.md  CONFIGURATION.md  DATA_MODEL.md  DECISIONS.md  SCANNING.md  SCORING.md
falkordb/: Dockerfile  docker-compose.yml  parse.py  tools.json
src/: __init__.py  cli.py  consts.py  models.py  pipeline.py
src/Evaluators/: __init__.py
src/Models/: __init__.py  common.py  model_classification.py  model_eval.py  model_stats.py  model_storage.py  model_tool.py
src/Scrapers/: __init__.py  base_scraper.py  docker_hub.py
src/Storage/: __init__.py
src/categorization/: __init__.py  classifier.py  classifier_cache.py  human_maintained.py  identity.py  keyword_assigner.py  keyword_assigner_cache.py  keyword_taxonomy.py  taxonomy.py
src/evaluators/: __init__.py  base.py  composite.py  maintenance.py  popularity.py  registry.py  security.py  stats_generator.py  trust.py
src/filters/: __init__.py  post_filter.py  pre_filter.py
src/models/: __init__.py  model_classification.py  (+4 more)
tests/: __init__.py  conftest.py  test_classifier.py  test_cli.py  test_docker_hub_scraper.py  test_evaluators.py  test_file_cache.py  test_file_manager.py  test_identity.py  test_image_resolver.py  test_integration.py  test_keyword_assigner.py  test_keyword_taxonomy.py  test_models.py  test_post_filter.py  test_pre_filter.py  test_scan_orchestrator.py  test_stats_generator.py  test_taxonomy.py  test_trivy_scanner.py
(+19 files in other folders)
